--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ p {
 }
 
 h3 {
+  max-width: 100%;
   margin-top: 0;
   margin-bottom: 0%;
 }
@@ -291,24 +292,31 @@ h3 {
 }
 
 .features {
+  flex-basis: 100%;
+  justify-content: center;
+  display: flex;
   background: #ffffff;
   padding-top: 94px;
 }
 
-.features {
-  display: flex;
+@media screen and (min-width: 760px) {
+  .features__list {
+    flex-basis: calc((100% - 30px * 2) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features__list {
+    flex-basis: calc((100% - 30px * 4) / 4);
+    display: flex;
+  }
+}
+
+.features__list__item {
   justify-content: center;
 }
 
-.features__list {
-  display: flex;
-}
-
-.features__item {
-  flex-basis: 270px;
-}
-
-.features__item:not(:last-child) {
+.features__list__item:not(:last-child) {
   margin-right: 20px;
 }
 
@@ -332,6 +340,12 @@ h3 {
   margin-bottom: 10px;
 }
 
+@media (max-width: 768px) {
+  .feature__title {
+    text-align: center;
+  }
+}
+
 .features__desc {
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -342,6 +356,12 @@ h3 {
   background: #ffffff;
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+@media (max-width: 1199.98px) {
+  .our-work {
+    display: none;
+  }
 }
 
 .our-work .list {
@@ -401,6 +421,7 @@ h3 {
   padding: 0;
   flex-wrap: wrap;
   display: flex;
+  flex-basis: 100%;
 }
 
 .team__item {
@@ -476,8 +497,28 @@ h3 {
 }
 
 .our-clients__list {
+  flex-basis: 100%;
+  flex-wrap: wrap;
   display: flex;
-  justify-content: space-between;
+}
+
+.our-clients_item {
+  justify-content: center;
+}
+
+@media screen and (min-width: 760px) {
+  .our-clients_item {
+    flex-basis: calc((100% - 30px * 3) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-clients_item {
+    display: flex;
+  }
+  .our-clients_item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .our-clients__link {
@@ -497,9 +538,11 @@ h3 {
   fill: #2196f3;
 }
 
-.footer > .container {
-  display: flex;
-  align-items: baseline;
+@media (min-width: 1119.98px) {
+  .footer > .container {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
 .footer {
@@ -585,6 +628,7 @@ h3 {
 .footer-social {
   width: 206px;
   display: block;
+  padding-right: 93px;
 }
 
 .footer-social__title {
@@ -624,11 +668,12 @@ h3 {
 
 .footer-subscribtion {
   display: block;
-  padding-left: 90px;
 }
 
-.footer-social__form {
-  display: flex;
+@media (min-width: 1119.98px) {
+  .footer-social__form {
+    display: block;
+  }
 }
 
 .footer-btn {
@@ -637,12 +682,14 @@ h3 {
   align-items: center;
 }
 
-.user-subscribtion {
-  display: flex;
+@media (min-width: 1119.98px) {
+  .user-subscribtion {
+    display: flex;
+  }
 }
 
 .user-subscribtion input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -671,6 +718,7 @@ h3 {
 }
 
 .project-button__list {
+  flex-wrap: wrap;
   display: flex;
   justify-content: center;
 }
@@ -730,13 +778,24 @@ h3 {
   margin: 0;
   list-style: none;
   display: flex;
-  flex-wrap: wrap;
 }
 
 .portfolio__item {
   margin-right: 30px;
   background-color: #ffffff;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio__item {
+    flex-basis: calc((100% - 15px * 4) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__item {
+    flex-basis: calc((100% - 15px * 6) / 3);
+  }
 }
 
 .portfolio__img {
