--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,8 @@
 .footer > .container {
-  display: flex;
-  align-items: baseline;
+  @media (min-width: 1119.98px) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 .footer {
   padding-top: 60px;
@@ -79,6 +81,7 @@
 .footer-social {
   width: 206px;
   display: block;
+  padding-right: 93px;
 }
 .footer-social__title {
   font-weight: bold;
@@ -118,10 +121,11 @@
 
 .footer-subscribtion {
   display: block;
-  padding-left: 90px;
 }
 .footer-social__form {
-  display: flex;
+  @media (min-width: 1119.98px) {
+    display: block;
+  }
 }
 
 .footer-btn {
@@ -130,10 +134,12 @@
   align-items: center;
 }
 .user-subscribtion {
-  display: flex;
+  @media (min-width: 1119.98px) {
+    display: flex;
+  }
 }
 .user-subscribtion input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
