--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -12,8 +12,22 @@
   margin-top: 0;
 }
 .our-clients__list {
+  flex-basis: 100%;
+  flex-wrap: wrap;
   display: flex;
-  justify-content: space-between;
+}
+
+.our-clients_item {
+  justify-content: center;
+  @media screen and (min-width: 760px) {
+    flex-basis: calc((100% - 30px * 3) / 3);
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
 .our-clients__link {
   width: 170px;
