--- a/sass/components/_our-work.scss
+++ b/sass/components/_our-work.scss
@@ -1,4 +1,7 @@
 .our-work {
+  @media (max-width: 1199.98px) {
+    display: none;
+  }
   background: $text-white;
   padding-top: 94px;
   padding-bottom: 94px;
