--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -32,9 +32,14 @@
   margin: 0;
   list-style: none;
   display: flex;
-  flex-wrap: wrap;
 }
 .portfolio__item {
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 15px * 4) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 15px * 6) / 3);
+  }
   margin-right: 30px;
   background-color: $text-white;
   margin-bottom: 30px;
