--- a/css/main.css
+++ b/css/main.css
@@ -498,7 +498,6 @@ h3 {
 
 .our-clients__list {
   flex-basis: 100%;
-  flex-wrap: wrap;
   display: flex;
 }
 
@@ -513,16 +512,13 @@ h3 {
 }
 
 @media screen and (min-width: 1200px) {
-  .our-clients_item {
-    display: flex;
-  }
   .our-clients_item:not(:last-child) {
     margin-right: 30px;
   }
 }
 
 .our-clients__link {
-  width: 170px;
+  width: 100%;
   height: 92px;
   display: flex;
   justify-content: center;
@@ -764,7 +760,7 @@ h3 {
 }
 
 .portfolio__article {
-  width: 370px;
+  width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
