--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -13,7 +13,6 @@
 }
 .our-clients__list {
   flex-basis: 100%;
-  flex-wrap: wrap;
   display: flex;
 }
 
@@ -23,14 +22,13 @@
     flex-basis: calc((100% - 30px * 3) / 3);
   }
   @media screen and (min-width: 1200px) {
-    display: flex;
     &:not(:last-child) {
       margin-right: 30px;
     }
   }
 }
 .our-clients__link {
-  width: 170px;
+  width: 100%;
   height: 92px;
   display: flex;
   justify-content: center;
