--- a/css/main.css
+++ b/css/main.css
@@ -496,18 +496,27 @@ h3 {
   margin-top: 0;
 }
 
-@media screen and (min-width: 760px) {
+.our-clients__list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.our-clients_item {
+  margin: 15px;
+}
+
+@media screen and (min-width: 768px) {
   .our-clients_item {
-    flex-basis: calc((100% - 30px * 3) / 3);
+    margin: 15px;
+    flex-basis: calc((100% - 15px * 6) / 3);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .our-clients_item {
     display: flex;
-  }
-  .our-clients_item:not(:last-child) {
-    margin-right: 30px;
+    margin: 15px;
+    flex-basis: calc((100% - 15px * 12) / 6);
   }
 }
 
