--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -12,19 +12,23 @@
   margin-top: 0;
 }
 .our-clients__list {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .our-clients_item {
-  @media screen and (min-width: 760px) {
-    flex-basis: calc((100% - 30px * 3) / 3);
+  margin: 15px;
+  @media screen and (min-width: 768px) {
+    margin: 15px;
+    flex-basis: calc((100% - 15px * 6) / 3);
   }
   @media screen and (min-width: 1200px) {
     display: flex;
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
+    margin: 15px;
+    flex-basis: calc((100% - 15px * 12) / 6);
   }
 }
+
 .our-clients__link {
   width: 100%;
   height: 92px;
