--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,4 @@
 @import "./components/project-button";
 @import "./components/portfolio";
 @import "./components/modal";
+@import "./components/mobile-menu";
