--- a/css/main.css
+++ b/css/main.css
@@ -170,8 +170,15 @@ h3 {
 }
 
 .nav .nav__list {
-  display: flex;
-  margin-left: 93px;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav .nav__list {
+    display: inline-flex;
+    display: flex;
+    margin-left: 93px;
+  }
 }
 
 .nav .nav__item:not(:last-child) {
@@ -210,16 +217,23 @@ h3 {
 }
 
 .auth {
-  display: flex;
-  margin-left: auto;
-  text-align: center;
+  display: none;
+}
+
+@media screen and (min-width: 769px) {
+  .auth {
+    display: inline-flex;
+    display: flex;
+    margin-left: auto;
+    text-align: center;
+  }
 }
 
 .auth__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.auth .auth__link {
+.auth__link {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -230,13 +244,13 @@ h3 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.auth .auth__link:hover, .auth .auth__link:focus {
+.auth__link:hover, .auth__link:focus {
   color: #2196f3;
   fill: #2196f3;
 }
 
-.auth .auth__link:hover .auth__icon,
-.auth .auth__link:focus .auth__icon {
+.auth__link:hover .auth__icon,
+.auth__link:focus .auth__icon {
   fill: #2196f3;
 }
 
@@ -301,22 +315,38 @@ h3 {
 
 @media screen and (min-width: 760px) {
   .features__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: calc(-1 * 15px);
     flex-basis: calc((100% - 30px * 2) / 2);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features__list {
-    flex-basis: calc((100% - 30px * 4) / 4);
     display: flex;
   }
 }
 
-.features__list__item {
+.features__item {
   justify-content: center;
 }
 
-.features__list__item:not(:last-child) {
+@media screen and (min-width: 768px) {
+  .features__item {
+    margin: 15px;
+    flex-basis: calc((100% - 30px * 4) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features__item {
+    margin: 15px;
+    flex-basis: calc((100% - 30px * 4) / 2);
+  }
+}
+
+.features__item:not(:last-child) {
   margin-right: 20px;
 }
 
@@ -418,6 +448,7 @@ h3 {
 }
 
 .team__list {
+  justify-content: center;
   padding: 0;
   flex-wrap: wrap;
   display: flex;
@@ -554,6 +585,12 @@ h3 {
   padding-right: 0;
 }
 
+@media screen and (max-width: 1199px) {
+  .footer {
+    text-align: center;
+  }
+}
+
 .logo-studio-footer {
   color: #ffffff;
   line-height: 1.2;
@@ -612,16 +649,39 @@ h3 {
 .post {
   margin-left: 0;
   margin-right: 30px;
-  width: 270px;
+  width: 100%;
+  max-width: 270px;
 }
 
 .post:not(:last-child) {
   margin-bottom: 9px;
 }
 
+@media screen and (min-width: 768px) {
+  .post {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 1299px) {
+  .post {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+}
+
 .footer-contakts__item {
   padding-left: 0px;
   margin: 0px;
+}
+
+@media screen and (min-width: 768) {
+  .post + .footer-social {
+    justify-content: space-between;
+  }
 }
 
 .footer-social {
@@ -644,7 +704,6 @@ h3 {
 
 .footer-social__list {
   display: flex;
-  justify-content: space-between;
 }
 
 .footer-social__link {
@@ -689,6 +748,7 @@ h3 {
 
 .user-subscribtion input {
   width: 100%;
+  max-width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -710,6 +770,7 @@ h3 {
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .project-button__item:not(:last-child) {
@@ -1025,5 +1086,132 @@ h3 {
 .btn-footer {
   display: block;
   margin: 0 auto;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  z-index: 55;
+  padding: 48px 48px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+  left: 0;
+}
+
+.mobile-menu__link {
+  font-style: Medium;
+  font-size: 40px;
+  line-height: 1.18;
+  line-height: 100%;
+  text-align: Left;
+  vertical-align: Top;
+  letter-spacing: 2%;
+  color: #212121;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: #2196f3;
+}
+
+.mobile-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-auth {
+  margin-top: 100px;
+  margin-bottom: 64px;
+}
+
+.mobile-auth__tel {
+  margin-bottom: 32px;
+  font-style: Medium;
+  font-size: 34px;
+  line-height: 1.18;
+  line-height: 100%;
+  text-align: Left;
+  vertical-align: Top;
+  letter-spacing: 2%;
+  color: #2196f3;
+}
+
+.mobile-auth__mail {
+  font-style: Medium;
+  font-size: 24px;
+  line-height: 1.17;
+  line-height: 100%;
+  text-align: Left;
+  vertical-align: Top;
+  letter-spacing: 2%;
+  color: #f5f4fa;
+}
+
+.mobile-auht__item:not(:first-child) {
+  margin-bottom: 32px;
+}
+
+.menu-social {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.menu-social__link {
+  font-style: Medium;
+  font-size: 18px;
+  line-height: 22px;
+  line-height: 104%;
+  text-align: Left;
+  vertical-align: Top;
+  letter-spacing: 2%;
+  color: #2196f3;
+}
+
+.menu-social__item:not(:last-child)::after {
+  content: "";
+  display: inline-block;
+  width: 1px;
+  height: 100%;
+  background-color: rgba(33, 33, 33, 0.2);
+  margin-left: 10px;
+}
+
+.mobile-menu__btn {
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border-color: none;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu__btn {
+    display: none;
+  }
+}
+
+.mobile-menu__btn:hover {
+  fill: #2196f3;
+}
+
+.is-open .mobile-menu__icon-menu {
+  display: none;
+}
+
+.mobile-menu__icon-close {
+  display: none;
+}
+
+.is-opne .mobile-menu__icon-close {
+  display: block;
 }
 /*# sourceMappingURL=main.css.map */
