--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -8,8 +8,12 @@
   display: flex;
   align-items: center;
   .nav__list {
-    display: flex;
-    margin-left: 93px;
+    display: none;
+    @media screen and (min-width: 768px) {
+      display: inline-flex;
+      display: flex;
+      margin-left: 93px;
+    }
   }
   .nav__item:not(:last-child) {
     margin-right: 50px;
@@ -45,30 +49,33 @@
   transition: background-color $animation, color $animation;
 }
 .auth {
-  display: flex;
-  margin-left: auto;
-  text-align: center;
+  display: none;
+  @media screen and(min-width:769px) {
+    display: inline-flex;
+    display: flex;
+    margin-left: auto;
+    text-align: center;
+  }
   &__item:not(:last-child) {
     margin-right: 50px;
   }
-
-  .auth__link {
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: $pargf-cl;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    display: block;
-    transition: background-color $animation, color $animation;
-    &:hover,
-    &:focus {
-      color: $btn-cl;
-      fill: $btn-cl;
-    }
-    &:hover .auth__icon,
-    &:focus .auth__icon {
-      fill: $btn-cl;
-    }
+}
+.auth__link {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: $pargf-cl;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: block;
+  transition: background-color $animation, color $animation;
+  &:hover,
+  &:focus {
+    color: $btn-cl;
+    fill: $btn-cl;
+  }
+  &:hover .auth__icon,
+  &:focus .auth__icon {
+    fill: $btn-cl;
   }
 }
