--- a/sass/components/_project-button.scss
+++ b/sass/components/_project-button.scss
@@ -8,6 +8,7 @@
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
+  flex-wrap: wrap;
 
   &__item:not(:last-child) {
     margin-right: 8px;
