--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,6 @@ h3 {
 *::before,
 *::after {
   box-sizing: inherit;
-  outline: 1px solid red;
 }
 
 .page {
@@ -133,35 +132,45 @@ h3 {
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
-  background-color: aqua;
 }
 
 @media screen and (min-width: 480px) {
   .container {
     max-width: 480px;
-    background-color: coral;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    background-color: lightgreen;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
-    background-color: yellow;
   }
 }
 
 .header__container {
   display: flex;
-  background: #ffffff;
-  margin-left: 93px;
-  margin-right: 93px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 760px) {
+  .header__container {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__container {
+    display: flex;
+    background: #ffffff;
+    margin-left: 93px;
+    margin-right: 93px;
+  }
 }
 
 .nav {
@@ -223,9 +232,15 @@ h3 {
 @media screen and (min-width: 769px) {
   .auth {
     display: inline-flex;
-    display: flex;
+    display: block;
     margin-left: auto;
     text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .auth {
+    display: flex;
   }
 }
 
@@ -234,12 +249,11 @@ h3 {
 }
 
 .auth__link {
+  display: none;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;
-  padding-top: 32px;
-  padding-bottom: 32px;
   display: block;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -252,6 +266,10 @@ h3 {
 .auth__link:hover .auth__icon,
 .auth__link:focus .auth__icon {
   fill: #2196f3;
+}
+
+.auht__item:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 .herro {
@@ -456,7 +474,6 @@ h3 {
 }
 
 .team__item {
-  flex-basis: 100%;
   justify-content: center;
 }
 
@@ -1097,7 +1114,7 @@ h3 {
   width: 100%;
   height: 100vh;
   background-color: white;
-  z-index: 55;
+  z-index: 1;
   padding: 48px 48px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1151,7 +1168,7 @@ h3 {
   text-align: Left;
   vertical-align: Top;
   letter-spacing: 2%;
-  color: #f5f4fa;
+  color: #757575;
 }
 
 .mobile-auht__item:not(:first-child) {
@@ -1186,6 +1203,7 @@ h3 {
 }
 
 .mobile-menu__btn {
+  z-index: 3;
   width: 40px;
   height: 40px;
   background-color: transparent;
@@ -1208,10 +1226,10 @@ h3 {
 }
 
 .mobile-menu__icon-close {
-  display: none;
+  display: block;
 }
 
-.is-opne .mobile-menu__icon-close {
+.is-open .mobile-menu__icon-close {
   display: block;
 }
 /*# sourceMappingURL=main.css.map */
