--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -3,22 +3,22 @@
   margin: 0 auto;
   padding: 0 15px;
 
-  background-color: aqua;
+  //background-color: aqua;
 
   @media screen and (min-width: 480px) {
     max-width: 480px;
 
-    background-color: coral;
+    // background-color: coral;
   }
 
   @media screen and (min-width: 768px) {
     max-width: 768px;
-    background-color: lightgreen;
+    // background-color: lightgreen;
   }
 
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
 
-    background-color: yellow;
+    // background-color: yellow;
   }
 }
