--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -1,9 +1,19 @@
 .header__container {
   display: flex;
-  background: $text-white;
-  margin-left: 93px;
-  margin-right: 93px;
+  align-items: center;
+  justify-content: space-between;
+
+  @media screen and(min-width:760px) {
+    display: flex;
+  }
+  @media screen and(min-width:1200px) {
+    display: flex;
+    background: $text-white;
+    margin-left: 93px;
+    margin-right: 93px;
+  }
 }
+
 .nav {
   display: flex;
   align-items: center;
@@ -52,21 +62,24 @@
   display: none;
   @media screen and(min-width:769px) {
     display: inline-flex;
-    display: flex;
+    display: block;
     margin-left: auto;
     text-align: center;
+  }
+  @media screen and(min-width:1200px) {
+    display: flex;
   }
   &__item:not(:last-child) {
     margin-right: 50px;
   }
 }
 .auth__link {
+  display: none;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: $pargf-cl;
-  padding-top: 32px;
-  padding-bottom: 32px;
+
   display: block;
   transition: background-color $animation, color $animation;
   &:hover,
@@ -78,4 +91,7 @@
   &:focus .auth__icon {
     fill: $btn-cl;
   }
+}
+.auht__item:not(:last-child) {
+  margin-bottom: 10px;
 }
