--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -7,8 +7,9 @@
   width: 100%;
   height: 100vh;
   background-color: white;
-  z-index: 55;
+  z-index: 1;
   padding: 48px 48px;
+
   transition: $animation;
   &.is-open {
     left: 0;
@@ -55,7 +56,7 @@
     text-align: Left;
     vertical-align: Top;
     letter-spacing: 2%;
-    color: $bg-cl-icon;
+    color: $pargf-cl;
   }
 }
 .mobile-auht__item:not(:first-child) {
@@ -88,6 +89,7 @@
   margin-left: 10px;
 }
 .mobile-menu__btn {
+  z-index: 3;
   width: 40px;
   height: 40px;
   background-color: transparent;
@@ -100,12 +102,13 @@
     fill: $btn-cl;
   }
 }
+
 .is-open .mobile-menu__icon-menu {
   display: none;
 }
 .mobile-menu__icon-close {
-  display: none;
-  .is-opne & {
+  display: block;
+  .is-open & {
     display: block;
   }
 }
