--- a/css/main.css
+++ b/css/main.css
@@ -1148,8 +1148,11 @@ h3 {
   margin-bottom: 64px;
 }
 
+.mobile-auth__item {
+  margin-bottom: 10px;
+}
+
 .mobile-auth__tel {
-  margin-bottom: 32px;
   font-style: Medium;
   font-size: 34px;
   line-height: 1.18;
@@ -1203,11 +1206,13 @@ h3 {
 }
 
 .mobile-menu__btn {
-  z-index: 3;
+  z-index: 2;
   width: 40px;
   height: 40px;
+  top: 10;
+  right: 16;
   background-color: transparent;
-  border-color: none;
+  border: none;
   cursor: pointer;
 }
 
@@ -1226,7 +1231,7 @@ h3 {
 }
 
 .mobile-menu__icon-close {
-  display: block;
+  display: none;
 }
 
 .is-open .mobile-menu__icon-close {
