--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,5 @@
-.footer > .container {
-  @media (min-width: 1119.98px) {
-    display: flex;
-    align-items: baseline;
-  }
-}
 .footer {
+  padding-left: 0;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: $dark-bg;
@@ -12,9 +7,6 @@
   text-decoration: none;
   padding-left: 0;
   padding-right: 0;
-  @media screen and (max-width: 1199px) {
-    text-align: center;
-  }
 }
 
 .logo-studio-footer {
@@ -76,26 +68,12 @@
   &:not(:last-child) {
     margin-bottom: 9px;
   }
-  @media screen and (min-width: 768px) {
-    display: flex;
-    justify-content: space-around;
-    align-items: baseline;
-  }
-  @media screen and (min-width: 1299px) {
-    display: flex;
-    justify-content: space-around;
-    align-items: baseline;
-  }
 }
 .footer-contakts__item {
   padding-left: 0px;
   margin: 0px;
 }
-.post + .footer-social {
-  @media screen and(min-width:768) {
-    justify-content: space-between;
-  }
-}
+
 .footer-social {
   width: 206px;
   display: block;
