--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,10 +1,26 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  transition: visibility $animation, opacity $animation;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
 .modal {
+  width: 100%;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  min-width: 528px;
-  min-height: 581px;
+  margin: 0 auto;
 
   background-color: $text-white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -12,6 +28,10 @@
   border-radius: 4px;
   transform: translate(-50%, -50%) scaleX(1);
   transition: scale $animation, visibility $animation;
+  @media screen and(min-width:1200) {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 .btn-close {
   position: absolute;
