--- a/css/main.css
+++ b/css/main.css
@@ -99,22 +99,6 @@ h3 {
   background-color: #2196f3;
 }
 
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  opacity: 1;
-  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: bold;
@@ -234,7 +218,6 @@ h3 {
     display: inline-flex;
     display: block;
     margin-left: auto;
-    text-align: center;
   }
 }
 
@@ -269,7 +252,7 @@ h3 {
 }
 
 .auht__item:not(:last-child) {
-  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .herro {
@@ -477,6 +460,10 @@ h3 {
   justify-content: center;
 }
 
+.team__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
 @media screen and (min-width: 760px) {
   .team__item {
     flex-basis: calc((100% - 30px * 2) / 2);
@@ -585,14 +572,30 @@ h3 {
   fill: #2196f3;
 }
 
-@media (min-width: 1119.98px) {
+@media screen and (max-width: 768px) {
+  .footer > .container {
+    text-align: center;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .footer > .container {
     display: flex;
     align-items: baseline;
   }
 }
 
+@media screen and (max-width: 768px) {
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
 .footer {
+  padding-left: 0;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2f303a;
@@ -600,12 +603,6 @@ h3 {
   text-decoration: none;
   padding-left: 0;
   padding-right: 0;
-}
-
-@media screen and (max-width: 1199px) {
-  .footer {
-    text-align: center;
-  }
 }
 
 .logo-studio-footer {
@@ -616,7 +613,7 @@ h3 {
   color: #ffffff;
 }
 
-.footer-contakts-list {
+.footer-contakts__item {
   display: block;
   padding-left: 0;
 }
@@ -640,7 +637,7 @@ h3 {
   color: #2196f3;
 }
 
-.footer-contakts-list {
+.footer-contakts__list {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -674,31 +671,15 @@ h3 {
   margin-bottom: 9px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .post {
-    display: flex;
-    justify-content: space-around;
-    align-items: baseline;
-  }
-}
-
-@media screen and (min-width: 1299px) {
-  .post {
-    display: flex;
-    justify-content: space-around;
-    align-items: baseline;
+    width: 50%;
   }
 }
 
 .footer-contakts__item {
   padding-left: 0px;
   margin: 0px;
-}
-
-@media screen and (min-width: 768) {
-  .post + .footer-social {
-    justify-content: space-between;
-  }
 }
 
 .footer-social {
@@ -858,8 +839,10 @@ h3 {
 }
 
 .portfolio__item {
-  margin-right: 30px;
   background-color: #ffffff;
+}
+
+.portfolio__item:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -872,6 +855,7 @@ h3 {
 @media screen and (min-width: 1200px) {
   .portfolio__item {
     flex-basis: calc((100% - 15px * 6) / 3);
+    margin: 15px;
   }
 }
 
@@ -938,18 +922,41 @@ h3 {
   color: #757575;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
 .modal {
+  width: 100%;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  min-width: 528px;
-  min-height: 581px;
+  margin: 0 auto;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scaleX(1);
   transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200) {
+  .modal {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .btn-close {
@@ -1209,8 +1216,8 @@ h3 {
   z-index: 2;
   width: 40px;
   height: 40px;
-  top: 10;
-  right: 16;
+  top: 10px;
+  right: 16px;
   background-color: transparent;
   border: none;
   cursor: pointer;
