--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,3 +1,20 @@
+.footer > .container {
+  @media screen and(max-width:768px) {
+    text-align: center;
+    justify-content: center;
+  }
+  @media screen and(min-width:1200px) {
+    display: flex;
+    align-items: baseline;
+  }
+}
+.footer-container {
+  @media screen and(max-width:768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 .footer {
   padding-left: 0;
   padding-top: 60px;
@@ -16,7 +33,7 @@
   letter-spacing: 0.03em;
   color: #ffffff;
 }
-.footer-contakts-list {
+.footer-contakts__item {
   display: block;
   padding-left: 0;
 }
@@ -39,7 +56,7 @@
     color: $btn-cl;
   }
 }
-.footer-contakts-list {
+.footer-contakts__list {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -67,6 +84,9 @@
   max-width: 270px;
   &:not(:last-child) {
     margin-bottom: 9px;
+  }
+  @media screen and(max-width:768px) {
+    width: 50%;
   }
 }
 .footer-contakts__item {
