--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -94,8 +94,8 @@
   z-index: 2;
   width: 40px;
   height: 40px;
-  top: 10;
-  right: 16;
+  top: 10px;
+  right: 16px;
   background-color: transparent;
   border: none;
   cursor: pointer;
