--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -34,15 +34,18 @@
   display: flex;
 }
 .portfolio__item {
+  background-color: $text-white;
+
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 15px * 4) / 2);
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 15px * 6) / 3);
+    margin: 15px;
   }
-  margin-right: 30px;
-  background-color: $text-white;
-  margin-bottom: 30px;
 }
 .portfolio__img {
   position: relative;
