--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -13,6 +13,9 @@
 }
 
 .team__item {
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
   justify-content: center;
   @media screen and (min-width: 760px) {
     flex-basis: calc((100% - 30px * 2) / 2);
