--- a/css/main.css
+++ b/css/main.css
@@ -307,9 +307,7 @@ h3 {
 }
 
 .features {
-  flex-basis: 100%;
   justify-content: center;
-  display: flex;
   background: #ffffff;
   padding-top: 94px;
 }
@@ -348,7 +346,7 @@ h3 {
 }
 
 .features__item:not(:last-child) {
-  margin-right: 20px;
+  margin-bottom: 30px;
 }
 
 .features-rectangle {
@@ -449,14 +447,13 @@ h3 {
 }
 
 .team__list {
-  justify-content: center;
   padding: 0;
   flex-wrap: wrap;
   display: flex;
-  flex-basis: 100%;
 }
 
 .team__item {
+  width: 100%;
   justify-content: center;
 }
 
@@ -485,7 +482,7 @@ h3 {
   text-align: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  width: 270px;
+  width: 100%;
 }
 
 .team__content {
@@ -572,7 +569,7 @@ h3 {
   fill: #2196f3;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer > .container {
     text-align: center;
     justify-content: center;
@@ -586,7 +583,7 @@ h3 {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1119px) {
   .footer-container {
     display: flex;
     flex-wrap: wrap;
@@ -606,6 +603,7 @@ h3 {
 }
 
 .logo-studio-footer {
+  margin-bottom: 20px;
   color: #ffffff;
   line-height: 1.2;
   /* or 171% */
@@ -661,14 +659,10 @@ h3 {
 }
 
 .post {
+  margin-bottom: 60px;
   margin-left: 0;
-  margin-right: 30px;
   width: 100%;
   max-width: 270px;
-}
-
-.post:not(:last-child) {
-  margin-bottom: 9px;
 }
 
 @media screen and (max-width: 768px) {
@@ -683,9 +677,9 @@ h3 {
 }
 
 .footer-social {
+  margin-bottom: 60px;
   width: 206px;
   display: block;
-  padding-right: 93px;
 }
 
 .footer-social__title {
@@ -698,6 +692,10 @@ h3 {
   display: inline-block;
   margin-bottom: 20px;
   margin-top: 0;
+}
+
+.footer-social__item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .footer-social__list {
@@ -1216,8 +1214,8 @@ h3 {
   z-index: 2;
   width: 40px;
   height: 40px;
-  top: 10px;
-  right: 16px;
+  top: 10;
+  right: 16;
   background-color: transparent;
   border: none;
   cursor: pointer;
