--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,7 +1,6 @@
 .features {
-  flex-basis: 100%;
   justify-content: center;
-  display: flex;
+
   background: $text-white;
   padding-top: 94px;
   &__list {
@@ -29,7 +28,7 @@
     justify-content: center;
 
     &:not(:last-child) {
-      margin-right: 20px;
+      margin-bottom: 30px;
     }
   }
 }
