--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -69,8 +69,7 @@
   flex-wrap: wrap;
   margin-top: 10px;
   margin-left: 10px;
-  &__item {
-  }
+
   &__link {
     font-style: Medium;
     font-size: 18px;
@@ -94,8 +93,8 @@
   z-index: 2;
   width: 40px;
   height: 40px;
-  top: 10px;
-  right: 16px;
+  top: 10;
+  right: 16;
   background-color: transparent;
   border: none;
   cursor: pointer;
