--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -5,14 +5,13 @@
 }
 
 .team__list {
-  justify-content: center;
   padding: 0;
   flex-wrap: wrap;
   display: flex;
-  flex-basis: 100%;
 }
 
 .team__item {
+  width: 100%;
   &:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -35,7 +34,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  width: 270px;
+  width: 100%;
 }
 
 .team__content {
