--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -78,18 +78,22 @@
 }
 
 .post {
-  @media screen and(max-width:768px) {
+  @media screen and(max-width:767px) {
     text-align: center;
     margin-bottom: 60px;
     margin-left: 0;
-    //margin-right: 30px;
     width: 100%;
-    //max-width: 270px;
-    //&:not(:last-child) {
-    //  margin-bottom: 9px;
   }
-  @media screen and(min-width:769px) {
+  @media screen and(min-width:768px) {
     width: 50%;
+  }
+  @media screen and(min-width:1200px) {
+    margin-right: 70px;
+
+    max-width: 270px;
+    &:not(:last-child) {
+      margin-bottom: 9px;
+    }
   }
 }
 .footer-contakts__item {
@@ -98,10 +102,15 @@
 }
 
 .footer-social {
-  text-align: center;
-  margin-bottom: 60px;
-  //width: 206px;
-  //display: block;
+  @media screen and(max-width:1199px) {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+  @media screen and(min-width:1200px) {
+    //width: 206px;
+    display: block;
+    margin-right: 73px;
+  }
   //padding-right: 93px;
 }
 .footer-social {
@@ -113,7 +122,7 @@
     text-transform: uppercase;
 
     color: $text-white;
-    display: inline-block;
+    //display: inline-block;
     margin-bottom: 20px;
     margin-top: 0;
   }
@@ -146,22 +155,33 @@
 }
 
 .footer-subscribtion {
-  text-align: center;
-  display: block;
+  @media screen and(max-width:1200px) {
+    text-align: center;
+    display: block;
+  }
 }
 .footer-social__form {
   @media (min-width: 1119.98px) {
     display: block;
   }
+  @media screen and(min-width:1200px) {
+    display: flex;
+  }
 }
 
 .footer-btn {
   justify-content: center;
-  // display: flex;
+
   align-items: center;
+  @media (min-width: 1200px) {
+    display: flex;
+  }
 }
 .user-subscribtion {
   @media (min-width: 1119.98px) {
+    flex-basis: 570px;
+    display: flex;
+    justify-content: center;
   }
 }
 .user-subscribtion input {
