--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -63,7 +63,7 @@
   @media screen and(min-width:769px) {
     display: inline-flex;
     display: block;
-    margin-left: auto;
+    margin-left: 84px;
   }
   @media screen and(min-width:1200px) {
     display: flex;
