--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ h3 {
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: bold;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.2;
   color: #2196f3;
 }
@@ -470,7 +470,7 @@ h3 {
 @media screen and (min-width: 1200px) {
   .team__item {
     flex-basis: calc((100% - 30px * 4) / 4);
-    display: flex;
+    margin-top: 0;
   }
 }
 
@@ -545,6 +545,7 @@ h3 {
   .our-clients_item {
     display: flex;
     margin: 15px;
+    margin-top: 0;
     flex-basis: calc((100% - 15px * 12) / 6);
   }
 }
@@ -566,11 +567,13 @@ h3 {
   fill: #2196f3;
 }
 
-.footer-container {
-  justify-content: center;
+@media screen and (max-width: 767px) {
+  .footer-container {
+    justify-content: center;
+  }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
   .footer-container {
     display: flex;
     align-items: baseline;
@@ -580,7 +583,6 @@ h3 {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-container {
     flex-wrap: wrap;
-    justify-content: center;
   }
 }
 
@@ -805,7 +807,12 @@ h3 {
 .project-button__list {
   flex-wrap: wrap;
   display: flex;
-  justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .project-button__list {
+    justify-content: center;
+  }
 }
 
 .our-services__button {
@@ -867,7 +874,7 @@ h3 {
 
 @media screen and (min-width: 768px) {
   .portfolio {
-    margin: 15px;
+    margin: -15px;
   }
 }
 
@@ -888,7 +895,7 @@ h3 {
 
 @media screen and (min-width: 1200px) {
   .portfolio__item {
-    flex-basis: calc((100% - 15px * 6) / 3);
+    flex-basis: calc((100% - 3 * 30px) / 3);
     margin: 15px;
   }
 }
@@ -973,7 +980,6 @@ h3 {
 }
 
 .modal {
-  width: 100%;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -984,6 +990,12 @@ h3 {
   border-radius: 4px;
   transform: translate(-50%, -50%) scaleX(1);
   transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 1200) {
@@ -1147,13 +1159,14 @@ h3 {
 }
 
 .mobile-menu {
-  position: fixed;
+  display: flex;
+  position: absolute;
   top: 0;
   left: 100%;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: white;
   z-index: 1;
   padding: 48px 48px;
@@ -1180,6 +1193,10 @@ h3 {
   color: #2196f3;
 }
 
+.mobile-menu__list {
+  margin-bottom: 64px;
+}
+
 .mobile-menu__link__active {
   color: #2196f3;
 }
@@ -1189,7 +1206,7 @@ h3 {
 }
 
 .mobile-auth {
-  margin-top: 100px;
+  margin-top: auto;
   margin-bottom: 64px;
 }
 
@@ -1251,6 +1268,8 @@ h3 {
 }
 
 .mobile-menu__btn {
+  margin-top: 10px;
+  margin-bottom: 10px;
   z-index: 2;
   width: 40px;
   height: 40px;
