--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,11 +1,12 @@
 .mobile-menu {
-  position: fixed;
+  display: flex;
+  position: absolute;
   top: 0;
   left: 100%;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: white;
   z-index: 1;
   padding: 48px 48px;
@@ -30,6 +31,9 @@
     }
   }
 }
+.mobile-menu__list {
+  margin-bottom: 64px;
+}
 .mobile-menu__link {
   &__active {
     color: $btn-cl;
@@ -39,7 +43,7 @@
   margin-bottom: 32px;
 }
 .mobile-auth {
-  margin-top: 100px;
+  margin-top: auto;
   margin-bottom: 64px;
   &__item {
     margin-bottom: 10px;
@@ -95,6 +99,8 @@
   margin-left: 10px;
 }
 .mobile-menu__btn {
+  margin-top: 10px;
+  margin-bottom: 10px;
   z-index: 2;
   width: 40px;
   height: 40px;
