--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -15,7 +15,9 @@
   pointer-events: none;
 }
 .modal {
-  width: 100%;
+  @media screen and(max-width:767px) {
+    width: 100%;
+  }
   position: absolute;
   left: 50%;
   top: 50%;
