--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -25,6 +25,7 @@
   @media screen and (min-width: 1200px) {
     display: flex;
     margin: 15px;
+    margin-top: 0;
     flex-basis: calc((100% - 15px * 12) / 6);
   }
 }
