--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -33,7 +33,7 @@
   list-style: none;
   display: flex;
   @media screen and (min-width: 768px) {
-    margin: 15px;
+    margin: -15px;
   }
 }
 .portfolio__item {
@@ -47,7 +47,8 @@
     margin: 15px;
   }
   @media screen and (min-width: 1200px) {
-    flex-basis: calc((100% - 15px * 6) / 3);
+    // flex-basis: calc((100% - 15px * 6) / 3);
+    flex-basis: calc((100% - 3 * 30px) / 3);
     margin: 15px;
   }
 }
