--- a/sass/components/_project-button.scss
+++ b/sass/components/_project-button.scss
@@ -16,7 +16,9 @@
   &__list {
     flex-wrap: wrap;
     display: flex;
-    justify-content: center;
+    @media screen and(min-width:768px) {
+      justify-content: center;
+    }
   }
 }
 
