--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -22,7 +22,8 @@
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 30px * 4) / 4);
-    display: flex;
+
+    margin-top: 0;
   }
 }
 
