--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -60,18 +60,28 @@
 }
 .auth {
   display: none;
-  @media screen and(min-width:769px) {
+  @media screen and(min-width:768px) {
     display: inline-flex;
     display: block;
-    margin-left: 84px;
+    //margin-left: 84px;
   }
   @media screen and(min-width:1200px) {
     display: flex;
-  }
-  &__item:not(:last-child) {
-    margin-right: 50px;
+    align-items: center;
   }
 }
+.auth__item:not(:last-child) {
+  @media screen and(max-width:1119px) {
+    margin-bottom: 10px;
+  }
+
+  .auht__item:not(:last-child) {
+    @media screen and(min-width:1200px) {
+      margin-right: 50px;
+    }
+  }
+}
+
 .auth__link {
   display: none;
   font-weight: 500;
