--- a/css/main.css
+++ b/css/main.css
@@ -277,6 +277,13 @@ h3 {
   padding-bottom: 200px;
 }
 
+@media screen and (max-width: 1119px) {
+  .herro {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+
 .herro-title {
   font-family: "Roboto", sans-serif;
   margin-top: 0;
@@ -285,6 +292,12 @@ h3 {
   line-height: 1.36;
   color: #ffffff;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1119px) {
+  .herro-title {
+    font-size: 26px;
+  }
 }
 
 .btn {
@@ -678,7 +691,7 @@ h3 {
   }
 }
 
-@media screen and (max-width: 1119px) {
+@media screen and (min-width: 768px) {
   .post {
     width: 50%;
     text-align: center;
@@ -1187,7 +1200,7 @@ h3 {
   flex-direction: column;
   position: absolute;
   top: 0;
-  left: 100%;
+  left: 50%;
   display: flex;
   flex-direction: column;
   width: 100%;
