--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -87,7 +87,7 @@
     margin-left: 0;
     width: 100%;
   }
-  @media screen and(max-width:1119px) {
+  @media screen and(min-width:768px) {
     width: 50%;
     text-align: center;
   }
