--- a/css/main.css
+++ b/css/main.css
@@ -233,7 +233,7 @@ h3 {
 }
 
 @media screen and (min-width: 1200px) {
-  .auht__item:not(:last-child) {
+  .auth__item:not(:last-child) {
     margin-right: 50px;
   }
 }
@@ -330,6 +330,12 @@ h3 {
   justify-content: center;
   background: #ffffff;
   padding-top: 94px;
+}
+
+@media screen and (max-width: 1119px) {
+  .features {
+    padding: 60px 0;
+  }
 }
 
 @media screen and (min-width: 760px) {
@@ -466,6 +472,12 @@ h3 {
   padding-top: 94px;
 }
 
+@media screen and (max-width: 1119px) {
+  .team {
+    padding: 60px 0;
+  }
+}
+
 .team__list {
   padding: 0;
   flex-wrap: wrap;
@@ -508,6 +520,7 @@ h3 {
 }
 
 .team__social {
+  margin-top: 16px;
   display: flex;
   justify-content: center;
 }
@@ -535,6 +548,12 @@ h3 {
   padding: 94px 0;
 }
 
+@media screen and (max-width: 1119px) {
+  .our-clients {
+    padding: 60px 0;
+  }
+}
+
 .our-clients__title {
   color: #212121;
   font-weight: bold;
@@ -547,6 +566,7 @@ h3 {
 }
 
 .our-clients__list {
+  justify-content: center;
   display: flex;
   flex-wrap: wrap;
 }
@@ -555,10 +575,17 @@ h3 {
   margin: 15px;
 }
 
+@media screen and (max-width: 767px) {
+  .our-clients_item {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .our-clients_item {
+    flex-basis: calc((100% - 3 * 30px) / 3);
     margin: 15px;
-    flex-basis: calc((100% - 15px * 6) / 3);
   }
 }
 
@@ -604,14 +631,10 @@ h3 {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-container {
+    display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer-container {
-    justify-content: center;
+    justify-content: space-around;
+    align-items: baseline;
   }
 }
 
@@ -691,10 +714,15 @@ h3 {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1119px) {
+  .post {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1119px) {
   .post {
     width: 50%;
-    text-align: center;
   }
 }
 
@@ -830,6 +858,12 @@ h3 {
   padding-bottom: 94px;
 }
 
+@media screen and (max-width: 1119px) {
+  .our-services {
+    padding: 60px 0;
+  }
+}
+
 .project-button {
   display: flex;
   margin-bottom: 50px;
@@ -884,12 +918,16 @@ h3 {
   margin-top: 50px;
 }
 
-.portfolio :nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio :nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
-.portfolio :nth-last-child(-n + 3) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio :nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
 
 .portfolio__article {
@@ -909,9 +947,10 @@ h3 {
   display: flex;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .portfolio {
     margin: -15px;
+    flex-wrap: wrap;
   }
 }
 
@@ -925,7 +964,7 @@ h3 {
 
 @media screen and (min-width: 768px) {
   .portfolio__item {
-    flex-basis: calc((100% - 15px * 4) / 2);
+    flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
   }
 }
@@ -1198,16 +1237,15 @@ h3 {
 .mobile-menu {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 50%;
-  display: flex;
-  flex-direction: column;
+  left: 0;
   width: 100%;
   min-height: 100vh;
   background-color: white;
   z-index: 1;
   padding: 48px 48px;
+  transform: translateX(100%);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1217,6 +1255,7 @@ h3 {
 
 .mobile-menu__link {
   font-style: Medium;
+  font-weight: 500;
   font-size: 40px;
   line-height: 1.18;
   line-height: 100%;
@@ -1254,6 +1293,7 @@ h3 {
 
 .mobile-auth__tel {
   font-style: Medium;
+  font-weight: 500;
   font-size: 34px;
   line-height: 1.18;
   line-height: 100%;
@@ -1265,6 +1305,7 @@ h3 {
 
 .mobile-auth__mail {
   font-style: Medium;
+  font-weight: 500;
   font-size: 24px;
   line-height: 1.17;
   line-height: 100%;
@@ -1274,7 +1315,7 @@ h3 {
   color: #757575;
 }
 
-.mobile-auht__item:not(:first-child) {
+.mobile-auth__item:not(:first-child) {
   margin-bottom: 32px;
 }
 
@@ -1338,5 +1379,9 @@ h3 {
 
 .is-open .mobile-menu__icon-close {
   display: block;
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
 }
 /*# sourceMappingURL=main.css.map */
