--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,4 +1,7 @@
 .features {
+  @media screen and (max-width: 1119px) {
+    padding: 60px 0;
+  }
   justify-content: center;
 
   background: $text-white;
