--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -76,7 +76,7 @@
   }
 }
 
-.auht__item:not(:last-child) {
+.auth__item:not(:last-child) {
   @media screen and(min-width:1200px) {
     margin-right: 50px;
   }
