--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,23 +1,24 @@
 .mobile-menu {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 50%;
-  display: flex;
-  flex-direction: column;
+  left: 0;
   width: 100%;
   min-height: 100vh;
   background-color: white;
   z-index: 1;
   padding: 48px 48px;
+  transform: translateX(100%);
 
   transition: $animation;
   &.is-open {
     left: 0;
   }
+
   &__link {
     font-style: Medium;
+    font-weight: 500;
     font-size: 40px;
     line-height: 1.18;
     line-height: 100%;
@@ -52,6 +53,7 @@
 
   &__tel {
     font-style: Medium;
+    font-weight: 500;
     font-size: 34px;
     line-height: 1.18;
     line-height: 100%;
@@ -62,6 +64,7 @@
   }
   &__mail {
     font-style: Medium;
+    font-weight: 500;
     font-size: 24px;
     line-height: 1.17;
     line-height: 100%;
@@ -71,7 +74,8 @@
     color: $pargf-cl;
   }
 }
-.mobile-auht__item:not(:first-child) {
+
+.mobile-auth__item:not(:first-child) {
   margin-bottom: 32px;
 }
 .menu-social {
@@ -126,4 +130,7 @@
   .is-open & {
     display: block;
   }
+}
+.mobile-menu.is-open {
+  transform: translateX(0);
 }
