--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -1,4 +1,7 @@
 .our-clients {
+  @media screen and (max-width: 1119px) {
+    padding: 60px 0;
+  }
   padding: 94px 0;
 }
 .our-clients__title {
@@ -12,15 +15,20 @@
   margin-top: 0;
 }
 .our-clients__list {
+  justify-content: center;
   display: flex;
   flex-wrap: wrap;
 }
 
 .our-clients_item {
   margin: 15px;
-  @media screen and (min-width: 768px) {
+  @media screen and (max-width: 767px) {
+    flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
-    flex-basis: calc((100% - 15px * 6) / 3);
+  }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
