--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -10,10 +10,15 @@
   margin-top: 50px;
 
   & :nth-child(3n) {
-    margin-right: 0;
+    @media screen and (min-width: 1200px) {
+      margin-right: 0;
+    }
   }
+
   & :nth-last-child(-n + 3) {
-    margin-bottom: 0;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+    }
   }
 }
 .portfolio__article {
@@ -32,8 +37,9 @@
   margin: 0;
   list-style: none;
   display: flex;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin: -15px;
+    flex-wrap: wrap;
   }
 }
 .portfolio__item {
@@ -43,7 +49,7 @@
     margin-bottom: 30px;
   }
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 15px * 4) / 2);
+    flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
   }
   @media screen and (min-width: 1200px) {
