--- a/sass/components/_project-button.scss
+++ b/sass/components/_project-button.scss
@@ -1,4 +1,7 @@
 .our-services {
+  @media screen and (max-width: 1119px) {
+    padding: 60px 0;
+  }
   background-color: $text-white;
   padding-top: 94px;
   padding-bottom: 94px;
