--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,4 +1,7 @@
 .team {
+  @media screen and (max-width: 1119px) {
+    padding: 60px 0;
+  }
   background-color: $bg-cl-icon;
   padding-bottom: 94px;
   padding-top: 94px;
@@ -41,6 +44,7 @@
 }
 
 .team__social {
+  margin-top: 16px;
   display: flex;
   justify-content: center;
 }
